# devflow

./: .gitignore  Cargo.toml  README.md
src/: claude_md.rs  error.rs  main.rs
src/cli/: commit.rs  container.rs  containerize.rs  detect.rs  grove.rs  init.rs  mod.rs  task.rs  tmux.rs  tree.rs  worker.rs  worktree.rs
src/compose/: db.rs  manager.rs  mod.rs  ports.rs  template.rs
src/config/: local.rs  lock.rs  mod.rs  project.rs
src/container/: docker.rs  lifecycle.rs  mod.rs  templates.rs
src/detector/: mod.rs  patterns.rs
src/git/: branch.rs  mod.rs  repo.rs  worktree.rs
src/orchestrator/: cleanup.rs  grove.rs  mod.rs  state.rs  worker.rs
src/tmux/: layout.rs  mod.rs  session.rs  workspace.rs
templates/: Dockerfile.rails  Dockerfile.react-native
