[package]
name = "devflow"
version = "0.4.0"
edition = "2024"
description = "Parallel AI-assisted development orchestrator"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20"
bollard = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
thiserror = "2.0"
dialoguer = "0.12"
console = "0.16"
indicatif = "0.18"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
sysinfo = "0.33"
fs2 = "0.4"
which = "8.0"
dirs = "6.0"
tar = "0.4.44"
futures-util = "0.3.31"
http-body-util = "0.1.3"
bytes = "1.11.1"
